After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708484 - "Installed" status on "All" screen does not seem to be exposed to Assistive Technologies
"Installed" status on "All" screen does not seem to be exposed to Assistive T...
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-20 18:31 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2013-09-20 20:32 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Joanmarie Diggs (IRC: joanie) 2013-09-20 18:31:22 UTC
I have two items under "Picks" which have a blue rectangle with white text containing the word "Installed." Examining the item with Accerciser, I do not see the "Installed" status being exposed anywhere.

One possibility would be to tack it on to the accessible name, e.g. "Inkscape (Installed)." That will cause Orca to present it automatically.

Another option would be to expose "Installed" as the accessible description of the object. If you do that, Orca will be able to present it when the user performs the "where am I command" (KP_Enter on the desktop layout). And I can make Orca automatically present it, at least for gnome-software.