Set accessible names on tiles

We use the app name as the accessible name, and add '(Installed)'
to have an accessible variant of that blue 'stamp'.

https://bugzilla.gnome.org/show_bug.cgi?id=708484